# literalnie-qt

./: README.md  pong.py  pyproject.toml  utils.py
