[tool.poetry]
name = "literalnie-solver"
version = "0.1.0"
description = ""
authors = ["Mateusz Stankiewicz <mateusz@mateusz.at>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
